@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

left to right direction

class Player {
    name
    password
    budget
}

class Station {
    name
    capacity
    center
}

class StationType{
    radius
    cost
}

class Building {
}

class BuildingType {
    cost
    upgrade
}

class Scenario {
}

class Position{
    xCoordinate
    yCoordinate
}

class TimeRestriction{
    year
}


Player "1" -- "*" Station: builds >
Player "1" -- "*" Building: builds >
Player "*" -- "1" Scenario : selects >
Station "*" -- "1 "Building:  upgrades with  >
Station "1" -- "1" StationType: has >
Station "*" -- "1" Position: has >
Building "1" -- "1" BuildingType : has >
Scenario "1" -- "*" Building: contains >
Scenario "1" -- "*" Station : contains >
Scenario "1" -- "*" TimeRestriction: includes >
TimeRestriction "1" -- "*" BuildingType: affects >

@enduml